# neo-musix

./: Cargo.toml
src/: app.rs  audio_clip.rs  audio_engine.rs  audio_source.rs  main.rs  top_panel.rs
src/main_panel/: arrangement.rs  driver.rs  mod.rs
